[gd_scene load_steps=6 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://script_editor/script_editor.tscn" type="PackedScene" id=2]
[ext_resource path="res://character_editor/character_editor.tscn" type="PackedScene" id=3]
[ext_resource path="res://episode_editor/episode_editor.tscn" type="PackedScene" id=4]
[ext_resource path="res://project_editor/project_editor.tscn" type="PackedScene" id=5]

[node name="Main" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="MenuBar" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_right = 1008.0
margin_bottom = 20.0

[node name="FileMenu" type="MenuButton" parent="VBoxContainer/MenuBar"]
margin_right = 35.0
margin_bottom = 20.0
text = "File"
switch_on_hover = true

[node name="HelpMenu" type="MenuButton" parent="VBoxContainer/MenuBar"]
margin_left = 39.0
margin_right = 81.0
margin_bottom = 20.0
text = "Help"
switch_on_hover = true

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1008.0
margin_bottom = 566.0
size_flags_vertical = 3
tab_align = 0

[node name="ScriptEditor" parent="VBoxContainer/TabContainer" instance=ExtResource( 2 )]
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="CharacterEditor" parent="VBoxContainer/TabContainer" instance=ExtResource( 3 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="EpisodeEditor" parent="VBoxContainer/TabContainer" instance=ExtResource( 4 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ProjectEditor" parent="VBoxContainer/TabContainer" instance=ExtResource( 5 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="StatusBar" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 570.0
margin_right = 1008.0
margin_bottom = 584.0

[node name="Label" type="Label" parent="VBoxContainer/StatusBar"]
margin_right = 39.0
margin_bottom = 14.0
text = "Status"

[node name="OpenScriptDialog" type="FileDialog" parent="."]
margin_right = 275.0
margin_bottom = 130.0
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.txt" )
current_dir = "D:/PROJETS/INFO/GODOT/Games/SagaTK"
current_path = "D:/PROJETS/INFO/GODOT/Games/SagaTK/"

[connection signal="file_selected" from="OpenScriptDialog" to="." method="_on_OpenScriptDialog_file_selected"]
